Make task columns display correctly on IE7.
See bug for details:
https://bugzilla.wikimedia.org/show_bug.cgi?id=45527

Solution description:
http://mathiasbynens.be/notes/safe-css-hacks#css-hacks
http://stackoverflow.com/a/5838575

Bug: 45527

--- a/resources/ext.gettingstarted.css
+++ b/resources/ext.gettingstarted.css
@@ -43,6 +43,8 @@
 
 #onboarding-tasks li {
 	display: inline-block;
+	*display: inline; /* IE7 and below */
+	zoom: 1;          /* IE7 and below */
 	margin-right: 3em;
 	width: 16em;
 	text-align: center;
